<resources>
    <string name="app_name">App Portfolio</string>
    <string name="action_settings">Settings</string>

    <!-- Main Activity -->
    <string name="main_title">My App Portfolio</string>
    <string name="main_nano_degree_apps">My Nanodegree Apps!</string>
    <string name="main_spotify">Spotify Streamer</string>
    <string name="main_scores">Scores App</string>
    <string name="main_library">Library App</string>
    <string name="main_build_bigger">Build It Bigger</string>
    <string name="main_xyz_reader">XYZ Reader</string>
    <string name="main_capstone">Capstone: My Own App</string>

</resources>
